feat(login) : Enforce login for views and improve login redirect
Added LoginRequiredMixin to client and staff views to require authentication. Updated login form and view to support 'next' parameter for post-login redirection. Changed default route to home and set LOGIN_URL in settings. Logout now redirects to home instead of login.

--- a/authen/templates/login.html
+++ b/authen/templates/login.html
@@ -24,6 +24,9 @@
         <!-- Login Form -->
         <form method="POST" action="{% url 'login' %}"  class="space-y-6">
             {% csrf_token %}
+            {% if request.GET.next %}
+                <input type="hidden" name="next" value="{{ request.GET.next }}">
+            {% endif %}
             {{ form.username.errors }}
             <div>
                 <label for="username" class="block text-white text-lg mb-3">username</label>
