--- a/staff/templates/base_staff.html
+++ b/staff/templates/base_staff.html
@@ -28,7 +28,7 @@
             </div>
             <!-- User Actions -->
             <div class="flex items-center gap-4">
-                <span class="text-slate-300">Staff</span>
+                <span class="text-slate-300 text-xl"> {{ request.user|default:"Staff" }}</span>
                 <a href="{% url 'logout' %}" class="px-6 py-3 bg-red-400 hover:bg-red-500 rounded-full transition-colors">logout</a>
             </div>
         </nav>
